# MedFlow

./: .gitignore  FUNCTIONALITY_GUIDE.md  GRAPH_MEMORY_GUIDE.md  HEALTHCARE_DATA_SOURCES.md  LANGGRAPH_REDTEAM_LAB.md  README.md  REDTEAM_FRAMEWORK_COMPARISON.md  app.py  pyproject.toml  requirements.txt
config/: internal_capabilities.json  redteam_lab.json
data/sample_alerts/: redteam_hospital_portal.json
scripts/: analyze_identity_import.py  ask_agent.py  build_capability_inventory.py  build_index.py  check_gpu.py  compare_redteam_frameworks.py  download_kaggle_healthcare.py  import_web_scan_report.py  ingest_campaign_graph.py  install_redteam_tools.sh  query_graph_memory.py  review_graph_memory.py  run_langgraph_redteam_lab.py  run_redteam_campaign.py  search_kb.py
src/medflow_compare/: __init__.py  langgraph_workflow.py  llamaindex_workflow.py  schemas.py  shared_tools.py
src/medflow_graph/: __init__.py  memory.py
src/medflow_redteam/: __init__.py  campaign.py  capabilities.py  config_loader.py  docker_lab.py  evidence.py  identity.py  langgraph_lab.py  tools.py
src/medflow_ti/: __init__.py  agents.py  cli.py  config.py  embeddings.py  healthcare.py  llm.py  mitre_loader.py  vector_store.py
tests/: test_redteam_core.py
