[build-system]
requires = ["setuptools>=78"]
build-backend = "setuptools.build_meta"

[project]
name = "medflow-ti"
version = "0.1.0"
description = "Healthcare-focused MITRE ATT&CK threat intelligence and red-team RAG platform."
requires-python = ">=3.10"
dependencies = [
  "chromadb",
  "sentence-transformers",
  "groq",
  "python-dotenv",
  "rich",
  "pandas",
  "kagglehub",
  "streamlit",
  "pypdf",
]

[project.scripts]
medflow-ti = "medflow_ti.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
